# schedule_check

./: .pre-commit-config.yaml  README.md  pyproject.toml  quick_check.py  tox.ini
schedule_check/: report_meetings_clashes.py
tests/: test_schedule_check.py  times
