[tool.isort]
profile = "black"

[tool.black]
line-length = 120
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | __pycache__
  | _build
  | buck-out
  | build
  | dist
  | amber.*
)/
'''

[tool.flake8] # it does nothing here, still need tox.ini
max-line-length = 120
extend-ignore = '''W503,E203,E501'''
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | __pycache__
  | _build
  | buck-out
  | build
  | dist
  | amber.*
)/
'''

[tool.poetry.scripts]
report_schedule = "schedule_check.report_meetings_clashes:main"

[tool.poetry]
name = "schedule_check"
version = "0.1.0"
description = ""
authors = ["Alan Silva <alanwilter@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.10.1"
pyupgrade = "^2.31.0"
black = "^21.12b0"
mypy = "^0.931"
flake8 = "^4.0.1"
pre-commit = "^2.17.0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
